[gd_scene load_steps=16 format=3 uid="uid://cwd8t1bdevga8"]

[ext_resource type="Script" path="res://scenes/interactableCharacter/interactable_character.gd" id="1_hargx"]
[ext_resource type="Shader" path="res://scenes/interactableCharacter/interactable_character.gdshader" id="2_1cv0v"]
[ext_resource type="Resource" uid="uid://d2i6ttn8v5bgn" path="res://scenes/dialogues/lines/dialogues/test_dialogue/dialogue_options_block_test.tres" id="2_ki524"]
[ext_resource type="AudioStream" uid="uid://r6oou2c8mf3j" path="res://scenes/TemplateEntity/idle.mp3" id="3_7o5le"]
[ext_resource type="PackedScene" uid="uid://dhraaqfxt8rpw" path="res://scenes/interactableCharacter/InteractionWindow.tscn" id="5_ipwex"]
[ext_resource type="PackedScene" uid="uid://dr5jvrtte8k8t" path="res://scenes/dialogues/dialogue_box/text_bubble.tscn" id="6_7y322"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k0vd5"]
shader = ExtResource("2_1cv0v")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 7.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = false
shader_parameter/number_of_images = Vector2(1, 1)
shader_parameter/is_highlighted = false

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_vypt4"]
resource_local_to_scene = true
load_path = "res://.godot/imported/TemplateEntitySheet.png-60bdf7a52acdc5738b9673bf3cab0de5.ctex"

[sub_resource type="Animation" id="Animation_k8fyg"]
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8ay3b"]
resource_name = "idle"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.766667, 1.1, 1.53333, 1.86667, 2.26667, 2.63333, 3.06667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 0, 0, 0, 0, 0, 0]
}

[sub_resource type="Animation" id="Animation_ua1vt"]
resource_name = "walk_left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_airge"]
resource_name = "walk_right"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e544i"]
_data = {
"RESET": SubResource("Animation_k8fyg"),
"idle": SubResource("Animation_8ay3b"),
"walk_left": SubResource("Animation_ua1vt"),
"walk_right": SubResource("Animation_airge")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tls0o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_le0wj"]
size = Vector2(130, 103)

[node name="InteractableCharacter" type="CharacterBody2D"]
position = Vector2(494, 376)
script = ExtResource("1_hargx")
hints_path = "res://scenes/interactableCharacter/test_hints.txt"
dialogue_options_block = ExtResource("2_ki524")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_k0vd5")
texture = SubResource("CompressedTexture2D_vypt4")
hframes = 2
vframes = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_7o5le")
volume_db = 3.059

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e544i")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_tls0o")
disabled = true

[node name="MovementTimer" type="Timer" parent="."]
one_shot = true

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("RectangleShape2D_le0wj")

[node name="InteractionWindow" parent="." node_paths=PackedStringArray("interactable_character") instance=ExtResource("5_ipwex")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -492.0
offset_top = -407.0
offset_right = -492.0
offset_bottom = -407.0
grow_horizontal = 1
grow_vertical = 1
interactable_character = NodePath("..")

[node name="TextBubble" parent="." instance=ExtResource("6_7y322")]
offset_left = -498.0
offset_top = -156.0
offset_right = 542.0
offset_bottom = -56.0

[connection signal="mouse_entered" from="InteractionArea" to="." method="set_mouse_on_object"]
[connection signal="mouse_exited" from="InteractionArea" to="." method="set_mouse_off_object"]
